--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
    <body>
       <div class="main-container">
          <h1 class="main-title">Pura Vida</h1>
+         <div style="width: 100%; text-align: right">
+
+<a href="https://www.instagram.com/hannahtemme/">
+         <img class="insta-logo" src="images/instagram.png"/> </a>
+       </div>
          <p class="main-subheading">The richness of a simple life</p>
          <div id="column-styles" class="col-sm-12">
             <div class="row">
