--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <body>
       <div class="main-container">
          <h1 class="main-title">Pura Vida</h1>
-         <div style="width: 100%; text-align: right">
+         <div  class ="insta-mobile" style="width: 100%; text-align: right">
 
 <a href="https://www.instagram.com/hannahtemme/">
          <img class="insta-logo" src="images/instagram.png"/> </a>
